# cloud-computing-specialization

./: .gitignore  Application  Application.cpp  Application.h  CHANGELOG.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  EmulNet.cpp  Grader.sh  Log.cpp  Log.h  MP1Node.cpp  MP1Node.h  Params.h  README.md  message_drop_single_failure.sh  single_failure.sh  submit.py
Fault-Tolerant-Key-Value-Store/: .gitignore  Application  Application.cpp  Log.h  MP2Node.cpp  MP2Node.h  Params.cpp  Readme.md
Fault-Tolerant-Key-Value-Store/submit/: run.sh
big-data-processing/: README.md  Task_1.md  Task_1_Queries.md  Task_2_Queries.md
emulated-sdn-application/: README.md  mdc
emulated-sdn-application/ext/ryu/: AUTHORS  ChangeLog
emulated-sdn-application/minidc/: config.txt  dc.py  memcfg.py  placement.py  profiles.py  roles.py  stats.py  topo.py
emulated-sdn-application/minidc/controller/: bwmon.py  bwstats.py  controller.py  flood.py  policy.py  ryucfg.py  topo.py
emulated-sdn-application/minidc/dashboard/: droppedpkts.csv  index.php  mc.js  mc.php  roles.csv  script.js  style.css  tenantplot.json  tenants.csv  tenantshare.csv
emulated-sdn-application/resources/wwwroot/: bunny.mpd
emulated-sdn-application/websrv/video/: streaming.html
key-value-store/: Application.h  EmulNet.h  Log.cpp  MP1Node.cpp  Params.h  stdincludes.h
membership-protocol/: Application  CMakeLists.txt  MP1Node.cpp  Params.cpp  README.md  multi_failure.sh
membership-protocol/submit/: submit.py
submit/: run.sh
(+122 files in other folders)
